@@ -10,8 +10,8 @@ torso_yaw                       on
 torso_pitch_max                 30.0
 tracking_mode                   off
 verbosity                       on
-wrist_joint                     8
-wrist_thres                     -1e9
+wrist_joint                     5
+wrist_thres                     100.0
 
 [left_arm]
 grasp_orientation               (-0.171542 0.124396 -0.977292 3.058211)
